# wordfreq-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
cldr_tools/: .gitignore  README.md  parse_likely_subtags.py
wordfreq/: .gitignore  Cargo.toml  NOTE.md  README.md  build.rs
wordfreq-core/: Cargo.toml
wordfreq-core/src/: lib.rs
wordfreq-data/: Cargo.toml  build-rs.txt  build.rs  features.txt  lib-rs.txt
wordfreq-data/resources/: small_el.txt  small_fil.txt  small_he.txt  small_hu.txt  small_ja.txt  small_ko.txt  small_lv.txt  small_nl.txt  small_pl.txt  small_pt.txt  small_sh.txt  small_sl.txt  small_tr.txt  small_uk.txt
wordfreq-data/scripts/: format_for_code.py  gen_codes.py
wordfreq-data/src/: lib.rs
wordfreq-example/: Cargo.toml  README.md
wordfreq-example/src/: main.rs
wordfreq-model/: .gitignore  Cargo.toml  NOTE.md  README.md  build.rs
wordfreq-model-test/: Cargo.toml  README.md
wordfreq-model-test/scripts/: gen_codes.py
wordfreq-model-test/src/: lib.rs
wordfreq-model-test/templates/: cargo_toml.txt  lib_rs.txt  load_wordfreq_rs.txt
wordfreq-model-test/tests/: load_wordfreq.rs
wordfreq-model/resources/: small_cs.txt  small_da.txt  small_fa.txt  small_fr.txt  small_hi.txt  small_ms.txt  small_sv.txt  small_ta.txt  small_zh.txt
wordfreq-model/scripts/: compile_all.sh  convert.sh  doc.rs  gen_codes.py  lib_rs.txt  parse_msgpack.py  requirements.txt
wordfreq-model/src/: lib.rs
wordfreq-model/templates/: build_rs.txt  cargo_toml.txt  lib_rs.txt
wordfreq/resources/: small_ar.txt  small_bg.txt  small_bn.txt  small_ca.txt  small_de.txt  small_en.txt  small_es.txt  small_fi.txt  small_id.txt  small_is.txt  small_it.txt  small_lt.txt  small_mk.txt  small_nb.txt  small_ro.txt  small_ru.txt  small_sk.txt  small_ur.txt  small_vi.txt
wordfreq/scripts/: gen_digit_mapping.py  parse_chinese.py
wordfreq/src/: chinese.rs  language.rs  lib.rs  main.rs  numbers.rs  preprocessers.rs  transliterate.rs
