[package]
name = "wordfreq-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
wordfreq = { path = "../wordfreq" }

[dev-dependencies]
approx = "0.5.1"

[build-dependencies]
wordfreq = { path = "../wordfreq" }
