[package]
name = "wordfreq-model"
version = "0.1.0"
edition = "2021"
authors = ["Shunsuke Kanda (kampersanda) <shnsk.knd@gmail.com>"]
description = "Model loaders for wordfreq-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/wordfreq-model"
repository = "https://github.com/kampersanda/wordfreq-rs"
homepage = "https://github.com/kampersanda/wordfreq-rs"
keywords = ["nlp"]
categories = ["text-processing"]

[features]
default = []

large-ar = []
large-bn = []
large-ca = []
large-cs = []
large-de = []
large-en = []
large-es = []
large-fi = []
large-fr = []
large-he = []
large-it = []
large-ja = []
large-mk = []
large-nb = []
large-nl = []
large-pl = []
large-pt = []
large-ru = []
large-sv = []
large-uk = []
large-zh = []
small-ar = []
small-bg = []
small-bn = []
small-ca = []
small-cs = []
small-da = []
small-de = []
small-el = []
small-en = []
small-es = []
small-fa = []
small-fi = []
small-fil = []
small-fr = []
small-he = []
small-hi = []
small-hu = []
small-id = []
small-is = []
small-it = []
small-ja = []
small-ko = []
small-lt = []
small-lv = []
small-mk = []
small-ms = []
small-nb = []
small-nl = []
small-pl = []
small-pt = []
small-ro = []
small-ru = []
small-sh = []
small-sk = []
small-sl = []
small-sv = []
small-ta = []
small-tr = []
small-uk = []
small-ur = []
small-vi = []
small-zh = []

[dependencies]
anyhow = "1.0"
wordfreq = { version = "0.1", path = "../wordfreq" }

[build-dependencies]
flate2 = "1.0.26"
wordfreq = { version = "0.1", path = "../wordfreq" }
