[package]
name = "wordfreq"
version = "0.2.2"
edition = "2021"
authors = ["Shunsuke Kanda (kampersanda) <shnsk.knd@gmail.com>"]
description = "Yet another Rust port of wordfreq for looking up the frequencies of words in many languages"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/wordfreq"
repository = "https://github.com/kampersanda/wordfreq-rs"
homepage = "https://github.com/kampersanda/wordfreq-rs"
keywords = ["nlp"]
categories = ["text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bincode = "1.3.3"
caseless = "0.2.1"
hashbrown = "0.13.2"
language-tags = "0.3.2"
regex = "1.8.3"
unicode-normalization = "0.1.22"

[dev-dependencies]
approx = "0.5.1"
